<?xml version="1.0" encoding="utf-8"?>
<resources>
	<string name="app_name">De Ushuaia a La Caca</string>
	<string name="mapbox_access_token">pk.eyJ1IjoianN0ZWluYWtlciIsImEiOiJjaW9yMHhtcWcwMDBidzlrajFpMzNubHI0In0.03AAhq2gtsosuhFbKAZj9A</string>
	<string name="searchBarHint">Search...</string>
	<string name="about">Information</string>
	<string name="credits">De Ushuaia a La Caca, Anales de la cartografía. Made with love by Javier Steinaker, hoping that everyone can find a proper public toilet when in need.</string>
	<string name="login">Log in</string>
	<string name="logout">Log out</string>
	<string name="addMarker">Add Marker</string>
	<string name="input_title">Title</string>
	<string name="input_description">Description</string>
	<string name="input_location">Location</string>
	<string name="input_name">Full name</string>
	<string name="input_email">E-mail</string>
	<string name="input_password">Password</string>
	<string name="repeat_password">Repeat password</string>
	<string name="auth_failed">Authentication failed</string>
	<string name="logging">Logging in...</string>
	<string name="required">Required</string>
	<string name="network_error">Network error</string>
	<string name="help_text">To add a new toilet, move the map to the desired zone (zoom to get more precise) and long press on the exact point in which you want to add it. A new marker with the plus sign will come up, press over it to complete the process. Remember: you have to be registered and logged in to be able to do this.</string>
	<string name="help">Help</string>
	<string name="edit_marker">Edit marker</string>
	<string name="delete_marker">Delete marker</string>
	<string name="confirm_delete_marker">Delete marker?</string>
	<string name="OK">OK</string>
	<string name="cancel">Cancel</string>
	<string name="login_needed">Login needed</string>
	<string name="login_needed_message">Login is required to be able to add new markers or edit existent ones.</string>
	<string name="user_account">User account</string>
	<string name="dont_have_account">Don\'t have an account?</string>
	<string name="register">Register</string>
	<string name="passwords_dont_match">Passwords don\'t match</string>
	<string name="search_location">Search location</string>
</resources>
