<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:id="@+id/register_layout"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:layout_marginTop="?attr/actionBarSize"
	android:orientation="vertical"
	android:paddingLeft="20dp"
	android:paddingRight="20dp">

	<android.support.design.widget.TextInputLayout
		android:id="@+id/input_name_layout"
		android:layout_width="match_parent"
		android:layout_height="wrap_content">

		<EditText
			android:id="@+id/input_name"
			android:hint="@string/input_name"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			/>
	</android.support.design.widget.TextInputLayout>
	
	<android.support.design.widget.TextInputLayout
		android:id="@+id/input_email_layout"
		android:layout_width="match_parent"
		android:layout_height="wrap_content">

		<EditText
			android:id="@+id/input_email"
			android:hint="@string/input_email"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			/>
	</android.support.design.widget.TextInputLayout>
	
	<android.support.design.widget.TextInputLayout
		android:id="@+id/input_password_layout"
		android:layout_width="match_parent"
		android:layout_height="wrap_content">

		<EditText
			android:id="@+id/input_password"
			android:hint="@string/input_password"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:inputType="textPassword"
			/>
	</android.support.design.widget.TextInputLayout>
	
	<android.support.design.widget.TextInputLayout
		android:id="@+id/repeat_password_layout"
		android:layout_width="match_parent"
		android:layout_height="wrap_content">

		<EditText
			android:id="@+id/repeat_password"
			android:hint="@string/repeat_password"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:inputType="textPassword"
			/>
	</android.support.design.widget.TextInputLayout>
	
	<Button
		android:id="@+id/register"
		android:text="@string/register"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_gravity="center_horizontal"
		/>
	
</LinearLayout>
